# WGPU_obj_Rendering

./: Cargo.toml  README.md  build.rs
src/: light.wgsl  main.rs  model.rs  shader.wgsl  texture.rs
